# python-event-sourcing-bank

./: README.md  docker-compose.yaml  pyproject.toml
src/transfers/: config.py
src/transfers/adapters/: repository.py
src/transfers/domain/: commands.py  events.py  exceptions.py  models.py
src/transfers/services/: handlers.py  uow.py
tests/unit/: test_account.py  test_handlers.py
